# study20230809day

./: README.md  t.txt  课程安排.txt
01_homework_1/: CMakeLists.txt  main.cpp
day02_1/: CMakeLists.txt
day02_1/02_array/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp
day02_1/02_array1/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp
day02_1/02_array3/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp
day02_1/03_string/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day02_1/03_string1/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day02_1/03_string2/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day02_1/04_vector/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day02_1/04_vector2/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day02_1/04_vector3/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day02_1/05_function/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp  06_main.cpp  07_main.cpp  08_main.cpp  hi.cpp  hi.h
day02_1/05_function2/: 01_main.cpp  02_main.cpp  03_main.cpp  05_main.cpp  06_main.cpp  07_main.cpp  08_main.cpp  hi.cpp
day02_1/05_function3/: 01_main.cpp  02_main.cpp  03_main.cpp  05_main.cpp  06_main.cpp  07_main.cpp  08_main.cpp  hi.cpp  hi.h
day02_1/06_header_impl/: 01_main.cpp  02_main.cpp  03_main.cpp  stu.h  stu2.h  stu3.h
day03/: CMakeLists.txt
day03/01_homework/: 1_main.cpp  2_main.cpp  3_main.cpp  stu.cpp  stu.h  stu2.cpp  stu2.h  stu3.cpp  stu3.h
day03/02_function/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day03/02_function2/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day03/02_function3/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day03/03/pointer/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp  06_main.cpp  07_main.cpp  08_main.cpp  09_main.cpp
day03/03/pointer2/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp  06_main.cpp  07_main.cpp  08_main.cpp  09_main.cpp
day03/03/pointer3/: 01_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp  07_main.cpp  08_main.cpp  09_main.cpp
day03/04/pointer_function/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day03/04/pointer_function2/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
day03/04/pointer_function3/: 01_main.cpp  02_main.cpp  03_main.cpp  04_main.cpp  05_main.cpp
