cmake_minimum_required(VERSION 3.25)
project(day02_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(day02_1 main.cpp)
add_executable(02_array_01_main 02_array/01_main.cpp)
add_executable(02_array_02_main 02_array/02_main.cpp)
add_executable(02_array_03_main 02_array/03_main.cpp)
add_executable(02_array_04_main 02_array/04_main.cpp)


add_executable(02_array1_01_main 02_array1/01_main.cpp)
add_executable(02_array1_02_main 02_array1/02_main.cpp)
add_executable(02_array1_03_main 02_array1/03_main.cpp)
add_executable(02_array1_04_main 02_array1/04_main.cpp)



add_executable(02_array3_01_main 02_array3/01_main.cpp)
add_executable(02_array3_02_main 02_array3/02_main.cpp)
add_executable(02_array3_03_main 02_array3/03_main.cpp)
add_executable(02_array3_04_main 02_array3/04_main.cpp)


add_executable(03_string_01_main 03_string/01_main.cpp)
add_executable(03_string_02_main 03_string/02_main.cpp)
add_executable(03_string_03_main 03_string/03_main.cpp)
add_executable(03_string_04_main 03_string/04_main.cpp)
add_executable(03_string_05_main 03_string/05_main.cpp)


add_executable(03_string1_01_main 03_string1/01_main.cpp)
add_executable(03_string1_02_main 03_string1/02_main.cpp)
add_executable(03_string1_03_main 03_string1/03_main.cpp)
add_executable(03_string1_04_main 03_string1/04_main.cpp)
add_executable(03_string1_05_main 03_string1/05_main.cpp)


add_executable(03_string2_01_main 03_string2/01_main.cpp)
add_executable(03_string2_02_main 03_string2/02_main.cpp)
add_executable(03_string2_03_main 03_string2/03_main.cpp)
add_executable(03_string2_04_main 03_string2/04_main.cpp)
add_executable(03_string2_05_main 03_string2/05_main.cpp)

add_executable(04_vector_01_main 04_vector/01_main.cpp)
add_executable(04_vector_02_main 04_vector/02_main.cpp)
add_executable(04_vector_03_main 04_vector/03_main.cpp)
add_executable(04_vector_04_main 04_vector/04_main.cpp)
add_executable(04_vector_05_main 04_vector/05_main.cpp)


add_executable(04_vector2_01_main 04_vector2/01_main.cpp)
add_executable(04_vector2_02_main 04_vector2/02_main.cpp)
add_executable(04_vector2_03_main 04_vector2/03_main.cpp)
add_executable(04_vector2_04_main 04_vector2/04_main.cpp)
add_executable(04_vector2_05_main 04_vector2/05_main.cpp)


add_executable(04_vector3_01_main 04_vector3/01_main.cpp)
add_executable(04_vector3_02_main 04_vector3/02_main.cpp)
add_executable(04_vector3_03_main 04_vector3/03_main.cpp)
add_executable(04_vector3_04_main 04_vector3/04_main.cpp)
add_executable(04_vector3_05_main 04_vector3/05_main.cpp)

add_executable(05_function_01_main 05_function/01_main.cpp)
add_executable(05_function_02_main 05_function/02_main.cpp)
add_executable(05_function_03_main 05_function/03_main.cpp)
add_executable(05_function_05_main 05_function/05_main.cpp)
add_executable(05_function_06_main 05_function/06_main.cpp)
add_executable(05_function_07_main 05_function/07_main.cpp)
add_executable(05_function_08_main 05_function/08_main.cpp)
add_executable(05_function_04_main 05_function/04_main.cpp 05_function/hi.cpp)

add_executable(05_function2_01_main 05_function2/01_main.cpp)
add_executable(05_function2_02_main 05_function2/02_main.cpp)
add_executable(05_function2_03_main 05_function2/03_main.cpp)
add_executable(05_function2_05_main 05_function2/05_main.cpp)
add_executable(05_function2_06_main 05_function2/06_main.cpp)
add_executable(05_function2_07_main 05_function2/07_main.cpp)
add_executable(05_function2_08_main 05_function2/08_main.cpp)
add_executable(05_function2_04_main 05_function2/04_main.cpp 05_function2/hi.cpp)

add_executable(05_function3_01_main 05_function3/01_main.cpp)
add_executable(05_function3_02_main 05_function3/02_main.cpp)
add_executable(05_function3_03_main 05_function3/03_main.cpp)
add_executable(05_function3_05_main 05_function3/05_main.cpp)
add_executable(05_function3_06_main 05_function3/06_main.cpp)
add_executable(05_function3_07_main 05_function3/07_main.cpp)
add_executable(05_function3_08_main 05_function3/08_main.cpp)
add_executable(05_function3_04_main 05_function3/04_main.cpp 05_function3/hi.cpp)


add_executable(06_header_impl_01_main 06_header_impl/01_main.cpp)
add_executable(06_header_impl_02_main 06_header_impl/02_main.cpp)
add_executable(06_header_impl_03_main 06_header_impl/03_main.cpp)
