cmake_minimum_required(VERSION 3.25)
project(day03)

set(CMAKE_CXX_STANDARD 17)

add_executable(day03 main.cpp)

add_executable(01_homework_1_main 01_homework/1_main.cpp 01_homework/stu.cpp)
add_executable(01_homework_2_main 01_homework/2_main.cpp 01_homework/stu2.cpp)
add_executable(01_homework_3_main 01_homework/3_main.cpp 01_homework/stu3.cpp)

add_executable(02_function_01_main 02_function/01_main.cpp)
add_executable(02_function_02_main 02_function/02_main.cpp)
add_executable(02_function_03_main 02_function/03_main.cpp)
add_executable(02_function_04_main 02_function/04_main.cpp)
add_executable(02_function_05_main 02_function/05_main.cpp)

add_executable(02_function2_01_main 02_function2/01_main.cpp)
add_executable(02_function2_02_main 02_function2/02_main.cpp)
add_executable(02_function2_03_main 02_function2/03_main.cpp)
add_executable(02_function2_04_main 02_function2/04_main.cpp)
add_executable(02_function2_05_main 02_function2/05_main.cpp)

add_executable(02_function3_01_main 02_function3/01_main.cpp)
add_executable(02_function3_02_main 02_function3/02_main.cpp)
add_executable(02_function3_03_main 02_function3/03_main.cpp)
add_executable(02_function3_04_main 02_function3/04_main.cpp)
add_executable(02_function3_05_main 02_function3/05_main.cpp)

add_executable(03_pointer_01_main 03/pointer/01_main.cpp)
add_executable(03_pointer_02_main 03/pointer/02_main.cpp)
add_executable(03_pointer_03_main 03/pointer/03_main.cpp)
add_executable(03_pointer_04_main 03/pointer/04_main.cpp)
add_executable(03_pointer_05_main 03/pointer/05_main.cpp)
add_executable(03_pointer_06_main 03/pointer/06_main.cpp)
add_executable(03_pointer_07_main 03/pointer/07_main.cpp)
add_executable(03_pointer_08_main 03/pointer/08_main.cpp)
add_executable(03_pointer_09_main 03/pointer/09_main.cpp)

add_executable(03_pointer2_01_main 03/pointer2/01_main.cpp)
add_executable(03_pointer2_02_main 03/pointer2/02_main.cpp)
add_executable(03_pointer2_03_main 03/pointer2/03_main.cpp)
add_executable(03_pointer2_04_main 03/pointer2/04_main.cpp)
add_executable(03_pointer2_05_main 03/pointer2/05_main.cpp)
add_executable(03_pointer2_06_main 03/pointer2/06_main.cpp)
add_executable(03_pointer2_07_main 03/pointer2/07_main.cpp)
add_executable(03_pointer2_08_main 03/pointer2/08_main.cpp)
add_executable(03_pointer2_09_main 03/pointer2/09_main.cpp)

add_executable(03_pointer3_01_main 03/pointer3/01_main.cpp)
add_executable(03_pointer3_02_main 03/pointer3/02_main.cpp)
add_executable(03_pointer3_03_main 03/pointer3/03_main.cpp)
add_executable(03_pointer3_04_main 03/pointer3/04_main.cpp)
add_executable(03_pointer3_05_main 03/pointer3/05_main.cpp)
add_executable(03_pointer3_06_main 03/pointer3/06_main.cpp)
add_executable(03_pointer3_07_main 03/pointer3/07_main.cpp)
add_executable(03_pointer3_08_main 03/pointer3/08_main.cpp)
add_executable(03_pointer3_09_main 03/pointer3/09_main.cpp)

add_executable(04_pointer_function_01_main 04/pointer_function/01_main.cpp)
add_executable(04_pointer_function_02_main 04/pointer_function/02_main.cpp)
add_executable(04_pointer_function_03_main 04/pointer_function/03_main.cpp)
add_executable(04_pointer_function_04_main 04/pointer_function/04_main.cpp)
add_executable(04_pointer_function_05_main 04/pointer_function/05_main.cpp)

add_executable(04_pointer2_function_01_main 04/pointer_function2/01_main.cpp)
add_executable(04_pointer2_function_02_main 04/pointer_function2/02_main.cpp)
add_executable(04_pointer2_function_03_main 04/pointer_function2/03_main.cpp)
add_executable(04_pointer2_function_04_main 04/pointer_function2/04_main.cpp)
add_executable(04_pointer2_function_05_main 04/pointer_function2/05_main.cpp)

add_executable(04_pointer3_function_01_main 04/pointer_function3/01_main.cpp)
add_executable(04_pointer3_function_02_main 04/pointer_function3/02_main.cpp)
add_executable(04_pointer3_function_03_main 04/pointer_function3/03_main.cpp)
add_executable(04_pointer3_function_04_main 04/pointer_function3/04_main.cpp)
add_executable(04_pointer3_function_05_main 04/pointer_function3/05_main.cpp)